--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -4,34 +4,53 @@ on:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
+
+# Uprawnienia do publikacji na Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+    
     - uses: actions/setup-node@v4
       with:
         node-version: lts/*
+        
     - name: Install dependencies
       run: npm ci
+      
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
+      
     - name: Run Playwright tests
       run: npx playwright test
+      
+    # Żeby można było pobrać ZIP-a ręcznie w Artifacts
     - uses: actions/upload-artifact@v4
       if: always()
       with:
         name: playwright-report
         path: playwright-report/
         retention-days: 30
+
+    - name: Upload artifact for GitHub Pages
+      uses: actions/upload-pages-artifact@v3
+      if: always()
+      with:
+        path: playwright-report/
+
+  # Job do publikacji
   deploy-report:
-    needs: test # Czeka aż testy się skończą (nawet jak failed)
-    if: always()
+    # Uruchom tylko jeśli jesteśmy na branchu main (żeby nie publikować z PR-ów)
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
+    needs: test
     runs-on: ubuntu-latest
-    permissions:
-      pages: write
-      id-token: write
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -39,5 +58,3 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-        with:
-          artifact_name: playwright-report
